old/gitops/apps/examples/gateway-argocd.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: public
  namespace: argocd
spec:
  gatewayClassName: cilium
  listeners:
    - name: https
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: wildcard-binghzal-tls
  hostname: argocd.binghzal.com
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  parentRefs:
    - name: public
  hostnames:
    - "argocd.binghzal.com"
  rules:
    - backendRefs:
        - name: argocd-server
          port: 80
